--- a/MyConsoleApp/MyConsoleApp.csproj
+++ b/MyConsoleApp/MyConsoleApp.csproj
@@ -1,10 +1,14 @@
+[EXPLANATION START]The current project file is targeting .NET 6.0, and you want to migrate it to target .NET 8.0. To do so, you need to update the "TargetFramework" element in the project file.[EXPLANATION END] 
+[CORRECTED FILE START]using System;
+
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
 </Project>
+[CORRECTED FILE END]
